--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: Forty Jekyll theme
-title: Octocat's homepage
+title: Welcome
 description: Bookmark this to keep an eye on my project updates!
