--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-hacker
 title: Charles Tan
 description: Bookmark this to keep an eye on my project updates!
